@@ -3,14 +3,13 @@ package io.kneo.broadcaster.service;
 import io.kneo.broadcaster.config.HlsPlaylistConfig;
 import io.kneo.broadcaster.dto.aihelper.BrandInfo;
 import io.kneo.broadcaster.dto.cnst.RadioStationStatus;
-import io.kneo.broadcaster.model.RadioStation;
 import io.kneo.broadcaster.service.stream.RadioStationPool;
 import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 
-import java.util.HashMap;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class AiHelperService {
@@ -21,18 +20,17 @@ public class AiHelperService {
     @Inject
     RadioStationPool radioStationPool;
 
-    public Uni<List<BrandInfo>> getBrandStatus(List<RadioStationStatus> statuses) {
-        HashMap<String, RadioStation> pool = radioStationPool.getPool();
-
-        List<BrandInfo> onlineBrands = pool.values().stream()
-                .filter(station -> statuses.contains(station.getStatus()))
-                .map(v -> {
-                    BrandInfo brand = new BrandInfo();
-                    brand.setRadioStationName(v.getSlugName());
-                    brand.setRadioStationStatus(v.getStatus()); // Use the station's actual status
-                    return brand;
-                })
-                .toList();
-        return Uni.createFrom().item(onlineBrands);
+    public Uni<List<BrandInfo>> getByStatus(List<RadioStationStatus> statuses) {
+        return Uni.createFrom().item(() ->
+                radioStationPool.getOnlineStationsSnapshot().stream()
+                        .filter(station -> statuses.contains(station.getStatus()))
+                        .map(station -> {
+                            BrandInfo brand = new BrandInfo();
+                            brand.setRadioStationName(station.getSlugName());
+                            brand.setRadioStationStatus(station.getStatus());
+                            return brand;
+                        })
+                        .collect(Collectors.toList())
+        );
     }
 }
